Decouple type stuff from scope stuff